<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"



    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="594dp"
        android:layout_height="915dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        app:srcCompat="@drawable/backgrounds" />

    <TextView
        android:id="@+id/namelable"
        android:layout_width="88dp"
        android:layout_height="38dp"
        android:text="@string/name"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/name"
        android:layout_width="253dp"
        android:layout_height="43dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColor="#00796B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toEndOf="@+id/namelable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/hight"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Hight"
        android:inputType="textPersonName"
        android:textColor="#00796B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/hightLable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="254dp"
        android:layout_height="40dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Weigth"
        android:inputType="textPersonName"
        android:textColor="#00796B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/weightLable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <EditText
        android:id="@+id/bmi"
        android:layout_width="220dp"
        android:layout_height="33dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#D32F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/hightLable"
        android:layout_width="86dp"
        android:layout_height="32dp"
        android:text="@string/hight"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namelable"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/weightLable"
        android:layout_width="80dp"
        android:layout_height="31dp"
        android:text="@string/weight"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hightLable"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/BMILable"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:text="@string/bmi"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderlable"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/genderlable"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:text="@string/gender"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightLable"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/save"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:onClick="onClickSave"
        android:text="Save  information"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <Button
        android:id="@+id/next"
        android:layout_width="158dp"
        android:layout_height="150dp"
        android:background="@drawable/timer"
        android:onClick="onclickNext"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save"
        app:layout_constraintVertical_bias="0.246" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/genders"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/genderlable"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:text="Go to the timer            Click here--->"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>